# alarm-clock-32

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig
main/: CMakeLists.txt  idf_component.yml  main.c
main/drivers/: audio.c  ds1307.c  ds1307.h  lilfs.c  tm1637.c  tm1637.h  vcnl4010.c  vcnl4010.h  w25q128.c
main/flash_data/: world.txt
main/http/: http_server.c  wifi.c
main/include/: audio.h  ds1307.h  errors.h  http_server.h  lilfs.h  tm1637.h  vcnl4010.h  w25q128.h  wifi.h
main/sensors/: ds1307.c  ds1307.h  vcnl4010.c  vcnl4010.h
main/utils/: errors.c  errors.h  i2c_config.h
www/: README.md  index.html  script.js
